# stardew-valley-llm

./: .gitignore  README.md  calculate_sum.py  notes  pyproject.toml  requirements.txt
data gathering/: addy.py  scraping.ipynb
data gathering/assets/quotes_data/: bclrt_quotes.json  other_quotes.json
data gathering/quotes_data/: bcl_quotes.json  story_quotes.json
data_gathering/: addy.py  requirements.txt  scraping.ipynb
model_testing/: llama3.2_1b_test.ipynb
