[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-llm"
version = "0.1.0"
description = "A LLM Integration for Stardew Valley NPC"
readme = "README.md"
authors = [{name = "Hung D Tran", email = "tranhungdat1210@gmail.com"}]
license = {text = "Apache License 2.0"}
dependencies = [
    "ollama==0.4.4",
    "python-dotenv==1.0.0",
]

[project.scripts]
start-chat = "src.main:main"
run-tests = "src.main:run_tests"

[tool.setuptools]
packages = ["src"]